Closed Bug 331066 Opened 19 years ago Closed 18 years ago

View source window does not tile properly or remember size/position

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.5

People

(Reporter: alqahira, Assigned: bugzilla-graveyard)

References

Details

(Keywords: fixed1.8.1.4)

Attachments

(1 file)

The new view-source in window (yay!) has a few issues with tiling behavior: I have my windows full-height. When I open a new browser window, the new window is full-height, and, because it can't stagger downward and remain full-height, the new window just staggers to the right (as does each successive window). This is the way tiling is supposed to work in this case. The source window, however, does not behave the same way. It 1) shrinks the height and 2) tiles too far down (instead of the standard titlebar+2px height, this is like titlebar-and-a-half). Also, if I open a second source window while the first is open (say, to compare the sources of two pages), the second window opens exactly on top of the first instead of tiling at all! Moreover, the source window always opens at the same size and position; it doesn't remember it's been resized.
But if the view-source window is the last window closed, Camino *does* remember its placement/sizing and makes the next full browser window in that location. Ew. cl
Chris mentioned on irc the other day he had some ideas about what was causing some of this. I noticed the other day that the size/position of the source window are exactly what a full-height window with collapsed toolbar would be if said window were "stuck" to the bottom of the screen rather than being "stuck" to the menubar....
Assignee: mikepinkerton → nobody
QA Contact: general
Target Milestone: --- → Camino1.1
Chris, any more ideas about fixing these? It gets pretty ugly on reopening when you've opened a source window at one point in your previous session ;)
...but I really wish cl would fix this :P
Target Milestone: Camino1.1 → Camino1.2
This prevents view-source window sizes/positions from being saved, which fixes the most annoying of the multiple problems discussed here -- that having a view-source window totally screws up browser window positioning if the view-source window was the last thing closed. The other issues are going to be spun off into separate bugs, says Smokey.
Assignee: nobody → cl-bugs
Status: NEW → ASSIGNED
Attachment #262594 - Flags: review?(froodian)
By the way, the fact that this bug and related issues exist at all is another very strong argument in favour of rolling a custom window class for view-source windows, so we can remember their sizes and positions separately from browser windows and not have to deal with ugly things like hiding toolbars to make them seem like they're something they aren't.
Comment on attachment 262594 [details] [diff] [review] prevents remembering of size/position for view-source windows r=me, but make sure we do file followups about the other issues mentioned in the bug. Also, as a reminder to whomever checks this in, please change "prettyness" to "prettiness" in the comment one line above this diff.
Attachment #262594 - Flags: review?(froodian) → review+
Attachment #262594 - Flags: superreview?(stuart.morgan)
Comment on attachment 262594 [details] [diff] [review] prevents remembering of size/position for view-source windows >+ [controller disableAutosave]; // don't save view-source window size/position Move this up to immediately after the [controller setChromeMask:kNoToolbarsChromeMask]; and sr=smorgan.
Attachment #262594 - Flags: superreview?(stuart.morgan) → superreview+
Blocks: 378841
Checked in with smorgan's comment on trunk and MOZILLA_1_8_BRANCH. Bug 378841 is the followup.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.4
Resolution: --- → FIXED
Target Milestone: Camino1.6 → Camino1.5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: