Camino only - Bug 331066: Don't remember the size/position of view source windows as the browser window default. Patch by Chris Lawson <cl-bugs@chrislawson.net> r=me sr=smorgan.